--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,7 +8,7 @@ env:
   # Add envs
   RESOURCE_GROUP_NAME: Handson02-CICD # 準備タスクで作成されたリソースグループ名をここに記載
   CONTAINERAPP_NAME: ctapp-demo-ui # 準備タスクで作成された UI Container App 名をここに記載
-  API_BASE_URL: https://ctapp-demo-ui.yellowcliff-b166fca8.japaneast.azurecontainerapps.io # 準備タスクで作成された API Container App のアプリケーション URL をここに記載
+  API_BASE_URL: https://ctapp-demo-api.yellowcliff-b166fca8.japaneast.azurecontainerapps.io # 準備タスクで作成された API Container App のアプリケーション URL をここに記載
   
 jobs:
   build:
