--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,7 +1,16 @@
 name: Trigger auto deployment
 on:
   # 手動実行用トリガー
-  workflow_dispatch:     
+  workflow_dispatch:
+  
+  # Add a trigger
+  # 自動実行用トリガー
+  push:
+    branches: 
+      [ main ]
+    paths:
+    - '**'
+  
   # Add env
 env:
   CONTAINER_REGISTRY: maeharadabypogrvynjth4.azurecr.io # Azure Container Registry のドメイン (~.azurecr.io) をこちらに設定
